# EcologySim

./: EcologySim.opam  README.md  brainstorm.md  dune-project
lib/: creature.ml  creature.mli  creature_traits.mli  dune  edible.ml  entity.mli  game.ml  game.mli  game_map.ml  lib.ml  plant.ml  plant.mli  render.ml  timer.ml  timer.mli
lib/edible/: edible.mli
lib/energy/: energy.mli
lib/entity/: entity.ml
lib/plant/: plant.ml
test/: dune
tex/: math.tex
