(lang dune 3.15)

(name EcologySim)

(generate_opam_files true)

(source
 (github ss0g/EcologySim))

(authors "Troy Edwards")

(maintainers "Troy Edwards")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name EcologySim)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
